# modern_design_patterns

./: .gitignore  CMakeLists.txt  README.md
Creational Design Patterns/: CMakeLists.txt
Creational Design Patterns/Decorator/: README.md  Static decorator.cpp
Creational Design Patterns/Factories/: Abstract Factory.cpp  Abstract_Factory.cpp  Factory Method.cpp  Factory.cpp  Functional_Factory.cpp  Inner_Factory.cpp  README.md  practice_test.cpp
Creational Design Patterns/Factories/includes/: CoffeeFactory.h  DrinkFactory.h  DrinkWithVolumeFactory.h  HotDrink.h  HotDrinkFactory.h
Pruebas/: CMakeLists.txt
SOLID Design Principles/:  Single Responsibility Principle.cpp  CMakeLists.txt  Dependency Inversion Principle.cpp  Interface Segregation Principle.cpp  Interface_Segregation_Principle.cpp  Liskov Substitution Principle.cpp  Open-Closed Principle.cpp  SOLID Design Principles.cpp  SOLID Design Principles.h  Single_Responsibility_Principle.cpp
Structural Design Patterns/Decorator/: Dynamic_decorator.cpp  Functional_decorator.cpp  README.md  Static_decorator.cpp  practice_test.cpp
